@@ -14,6 +14,7 @@ Cacti CHANGELOG
 -bug#0001133: Downed Device Detection: None leads to database errors
 -bug#0001134: update_host_status handles ping_availability incorrectly
 -bug#0001161: radio buttons have duplicate IDs. can easily be improved for usablility
+-bug#0001164: alt attributes don't make tooltips, title attrs do (host.php)
 -bug: Cacti does not guarentee RRA consolidation functions exist in RRA's.
 -feature#0001162: WEB UI now accepts max_oids on SNMP bulkwalks
 -feature#0001123: Performance tweak by adding some indices
